tests/NormalTests/paczka1/small_fuzzy/12010962.err
Error in line 1: A330 A330 98,2
Error in line 2: A330 A703 50,8
Error in line 4: QnkqUOTDMB A330 36,4
Error in line 16: QnkqUOTDMB A801 181,39
